--- a/views/dinos/new.ejs
+++ b/views/dinos/new.ejs
@@ -1,1 +1,11 @@
 <h2>Here is a form to add a new Dino</h2>
+
+<form action="/dinos" method="POST">
+    <label for="dino-type">Type:</label>
+    <input type="text" name="type" id="dino-type">
+
+    <label for="dino-name">Name:</label>
+    <input type="text" name="name" id="dino-name">
+
+    <input type="submit" value="Add that Dino!">
+</form>
