got functionality now

--- a/views/dinos/show.ejs
+++ b/views/dinos/show.ejs
@@ -1,4 +1,5 @@
-<h2>Here's <%= dino.name %></h2>%></h4>
+
+<h2>Here is a <%= dino.name %></h2>
 <h4><%= dino.name %> is a <%= dino.type %></h4>
 
 <a href="/dinos/edit/<%= dino.id %>">Edit <%= dino.name %></a>
