--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,12 @@
             </ul>
         </nav>
     </header>
+    <div class="cryptids">
+        <ul>
+            <li><a href="/cryptids">Show All Cryptids</a></li>
+            <li><a href="/cryptids/new">Add a Cryptid</a></li>
+        </ul>
+    </div>
 
     <%- body %>
 </body>
