--- a/views/dinos/edit.ejs
+++ b/views/dinos/edit.ejs
@@ -1,6 +1,6 @@
 <h2>Here's a form to edit a Dino<%= dino.name %></h2>
 
-<form action="/dinos/<%= dino.id %>/?_method=PUT"" method="POST">
+<form action="/dinos/<%= dino.id %>/?_method=PUT" method="POST">
     <label for="dino-type">Type:</label>
     <input type="text" name="type" id="dino-type" value="<%= dino.type %>">
 
