--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,2 @@
-<h1> Welcome to my Cruddy Life</h1>
+<h1> Welcome to my Cruddy Dino Cryptid Life</h1>
+<h2>You're about to see some weird shit!</h2>
